webserver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver
  namespace: tls-nginx
spec:
  selector:
    app: webserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
